<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".datos"
    android:orientation="vertical"
    android:background="@color/purple_500">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicacion"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicacion2"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/afp"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iss"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/renta"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

</LinearLayout>