<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Informacion"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrucciones"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:hint="@string/nombre"
        />
    <EditText
        android:id="@+id/horas"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:hint="@string/salario"
        />
    <Button
        android:id="@+id/btn_calculo"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/btn_calcular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respuesta"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"

        />

    <TextView
        android:id="@+id/AFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/ISSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        />
    <TextView
        android:id="@+id/RENTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        />
    <TextView
        android:id="@+id/repuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        />

</LinearLayout>